--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="assets/stations.js"></script>
 <script src="assets/js.js"></script>
 </body>
 </html>
