--- a/switch.html
+++ b/switch.html
@@ -11,8 +11,14 @@
 <label class="switch">
     <input type="checkbox" checked>
     <span class="slider round">
-        <div> test </div>
+        <div id="test"> Live </div>
     </span>
 </label>
+
+<script type="text/javascript">
+    document.getElementById("test").onclick(function() {
+        document.getElementById("test").innerHTML="Test"
+    })
+</script>
 </body>
 </html>
